2013-08-05 Miguel de Dios <miguel.dedios@artica.es>

	* ChangeLog: lost line about "lib/PandoraFMS/PredictionServer.pm"
	uploaded changes for SLA value of service.

2013-08-05 Miguel de Dios <miguel.dedios@artica.es>

	* util/pandora_snmp.sh: added first and weird version of tool to
	generate a lot of traps snmp for Pandora. Needs to improve.

2013-08-01  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Changed the name of the self-monitoring XML
	  files. Fixes bug #2365.

2013-08-01  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm,
	  lib/PandoraFMS/SNMPServer.pm,
	  lib/PandoraFMS/Server.pm,
	  lib/PandoraFMS/PluginServer.pm,
	  lib/PandoraFMS/ProducerConsumerServer.pm,
	  lib/PandoraFMS/PredictionServer.pm,
	  lib/PandoraFMS/ReconServer.pm,
	  lib/PandoraFMS/NetworkServer.pm,
	  lib/PandoraFMS/WMIServer.pm: Added clean-up code to avoid resource
	  leaks when there is a crash and the server has to auto-restart.

2013-07-25  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Fixed some parentheses that prevented
	  remote_snmp_string modules from working.

2013-07-24  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Search for sub-strings when matching an OID
	  within an SNMP alert. Regular expressions should not be necessary and
	  this avoids having to escape dots inside the OID. Added a couple of new
	  SNMP macros.

	* lib/PandoraFMS/Tools.pm: Added a function to check for valid regular expressions.

2013-07-23 Juan Manuel Ramón Vigo <juanmanuel.ramon@artica.es>
	
	* util/pandora_revent_create.pl: Pandora revent only for create events.

2013-07-17  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Do not execute more than one alert per trap.

2013-07-15  Sergio Martin <sergio.martin@artica.es>

	* util/plugin/snmp_remote.pl: Add SNMP remote plugin to the
	default plugins on Pandora FMS server

2013-07-10  Ramon Novoa  <rnovoa@artica.es>
