@@ -415,3 +415,10 @@ event_auto_validation 1
 # If defined, events generated by Pandora FMS will be written to the specified text file.
 #event_file /var/log/pandora/pandora_events.txt
 
+# Set the maximum number of traps that will be processed from a single source in a
+# configured time interval.
+#snmp_storm_protection 10
+
+# Time interval for snmp_storm protection (in seconds).
+#snmp_storm_timeout 600
+
