@@ -1017,7 +1017,7 @@ sub pandora_process_module ($$$$$$$$$;$) {
 	
 	# Calculate the current interval
 	my $current_interval;
-	if ($module->{'cron_interval'} ne '' && $module->{'cron_interval'} ne '* * * * *') {
+	if (defined ($module->{'cron_interval'}) && $module->{'cron_interval'} ne '' && $module->{'cron_interval'} ne '* * * * *') {
 		$current_interval = cron_next_execution ($module->{'cron_interval'});
 	}
 	elsif ($module->{'module_interval'} == 0) {
